src/snapshots/vm__parser__test__parse_ident-3.snap
---
source: src/parser.rs
expression: "ident_expr(\"12haha\".into())"
---
Err(
    Error(
        Stack {
            base: Base {
                location: LocatedSpan {
                    offset: 0,
                    line: 1,
                    fragment: "12haha",
                    extra: (),
                },
                kind: Expected(
                    Alpha,
                ),
            },
            contexts: [
                (
                    LocatedSpan {
                        offset: 0,
                        line: 1,
                        fragment: "12haha",
                        extra: (),
                    },
                    Context(
                        "Identifier",
                    ),
                ),
            ],
        },
    ),
)
