src/snapshots/vm__parser__test__parse_let_expr-2.snap
---
source: src/parser.rs
expression: "let_expr(\"let yeet = 123;\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 15,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: VariableDeclaration {
                ident: Ident(
                    "yeet",
                ),
                value: Some(
                    Ast {
                        node: Literal(
                            Int(
                                123,
                            ),
                        ),
                        span: LocatedSpan {
                            offset: 11,
                            line: 1,
                            fragment: "123",
                            extra: (),
                        },
                    },
                ),
            },
            span: LocatedSpan {
                offset: 0,
                line: 1,
                fragment: "let",
                extra: (),
            },
        },
    ),
)
