src/snapshots/vm__parser__test__parse_object-3.snap
---
source: src/parser.rs
expression: "object_expr(r#\"{a,}\"#.into())"
---
Ok(
    (
        LocatedSpan {
            offset: 4,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: ObjectLiteral(
                [
                    (
                        u!("a"),
                        Ast {
                            node: Ident(
                                u!("a"),
                            ),
                            span: LocatedSpan {
                                offset: 1,
                                line: 1,
                                fragment: "a",
                                extra: (),
                            },
                        },
                    ),
                ],
            ),
            span: LocatedSpan {
                offset: 0,
                line: 1,
                fragment: "{a,}",
                extra: (),
            },
        },
    ),
)
