src/snapshots/vm__parser__test__parse_object-5.snap
---
source: src/parser.rs
expression: "object_expr(r#\"{a: 1, \"b\": 2}\"#.into())"
---
Ok(
    (
        LocatedSpan {
            offset: 14,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: ObjectLiteral(
                [
                    (
                        u!("a"),
                        Ast {
                            node: Literal(
                                Int(
                                    1,
                                ),
                            ),
                            span: LocatedSpan {
                                offset: 4,
                                line: 1,
                                fragment: "1",
                                extra: (),
                            },
                        },
                    ),
                    (
                        u!("b"),
                        Ast {
                            node: Literal(
                                Int(
                                    2,
                                ),
                            ),
                            span: LocatedSpan {
                                offset: 12,
                                line: 1,
                                fragment: "2",
                                extra: (),
                            },
                        },
                    ),
                ],
            ),
            span: LocatedSpan {
                offset: 0,
                line: 1,
                fragment: "{a: 1, \"b\": 2}",
                extra: (),
            },
        },
    ),
)
