src/snapshots/vm__parser__test__parse_post_operators-10.snap
---
source: src/parser.rs
expression: "expr(\"a.b[0].c\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 8,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: AccessAttribute {
                source: Ast {
                    node: AccessKey {
                        source: Ast {
                            node: AccessAttribute {
                                source: Ast {
                                    node: Ident(
                                        u!("a"),
                                    ),
                                    span: LocatedSpan {
                                        offset: 0,
                                        line: 1,
                                        fragment: "a",
                                        extra: (),
                                    },
                                },
                                attribute: u!("b"),
                            },
                            span: LocatedSpan {
                                offset: 1,
                                line: 1,
                                fragment: ".b",
                                extra: (),
                            },
                        },
                        key: Ast {
                            node: Literal(
                                Int(
                                    0,
                                ),
                            ),
                            span: LocatedSpan {
                                offset: 4,
                                line: 1,
                                fragment: "0",
                                extra: (),
                            },
                        },
                    },
                    span: LocatedSpan {
                        offset: 3,
                        line: 1,
                        fragment: "[0]",
                        extra: (),
                    },
                },
                attribute: u!("c"),
            },
            span: LocatedSpan {
                offset: 6,
                line: 1,
                fragment: ".c",
                extra: (),
            },
        },
    ),
)
