src/snapshots/vm__parser__test__parse_post_operators-2.snap
---
source: src/parser.rs
expression: "expr(\"a.b\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 3,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: AccessAttribute {
                source: Ast {
                    node: Ident(
                        u!("a"),
                    ),
                    span: LocatedSpan {
                        offset: 0,
                        line: 1,
                        fragment: "a",
                        extra: (),
                    },
                },
                attribute: u!("b"),
            },
            span: LocatedSpan {
                offset: 1,
                line: 1,
                fragment: ".b",
                extra: (),
            },
        },
    ),
)
